<resources>
    <string name="app_name">TerraTrac</string>
    <string name="farm_list">Plots List</string>
    <string name="app_intro">Basic mobile app for traceability for compliance with EU deforestation regulation</string>
    <string name="developed_by">Developed By</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="item_will_be_deleted">This item will be deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="size">Size</string>
    <string name="ha">Ha</string>
    <string name="village">Village</string>
    <string name="district">District</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="farmer_photo">Farmer Photo</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="coordinates">Coordinates</string>
    <string name="harvested_this_year">Cherry harvested this year</string>
    <string name="kgs">Kgs</string>
    <string name="download_csv">Download Csv</string>
    <string name="update_farm">Update Plot</string>
    <string name="farm_name">Farmer Name</string>
    <string name="size_in_hectares">Plot Size</string>
    <string name="harvested_this_year_in_kgs">Cherry harvested this year in Kgs</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="take_picture">Take Picture</string>
    <string name="add_farm">Add Plot</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="fill_form">Please fill in all fields</string>
    <string name="collection_site_list">Collection sites</string>
    <string name="add_site">Add site</string>
    <string name="site_name">Site name</string>
    <string name="set_polygon">Set Polygon</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="confirm_add_farm">Want to set the Plot polygon? If not, add plot.</string>
    <string name="confirm_update_farm">Want to update the Plot polygon? If no, update plot.</string>
    <string name="accuracy">Accuracy</string>
    <string name="confirm_set_polygon">Have you finished setting the polygon? If so, proceed and save by selecting the \'Yes\' button.</string>
    <string name="clear_map">Do you want to clear the map?</string>
    <string name="confirm_update_site">Continue with \'yes\' if you want to update the collection site.</string>
    <string name="update_site">Update Collection Site</string>
    <string name="unit">Unit</string>
    <string name="agent_name">Agent Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="member_id">Member ID</string>
    <string name="get_started">Get Started</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="farm_info">Plot Info</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="can_not_get_location">Can\'t get location, Try again</string>
    <string name="location_update_failed">Can\'t Update location, Try again</string>
    <string name="add_point">Add Point</string>
    <string name="reset">Reset</string>
    <string name="drop_point">Drop Point</string>
    <string name="english">English</string>
    <string name="light_dark_theme">Light/Dark theme</string>
    <string name="select_language">Select Language:</string>
    <string name="settings">Settings</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="amharic">Amharic</string>
    <string name="oromo">Oromo</string>
    <string name="swahili">Swahili</string>
    <string name="enable_location">Turn On Location</string>
    <string name="enable_location_msg">Enable Location services in settings to get coordinates.</string>
    <string name="success_export_msg">Data exported successfully</string>
    <string name="set_new_polygon">Set New Polygon</string>
    <string name="export_data">Export Data</string>
    <string name="export_data_desc">Choose the format to export the data:</string>
    <string name="error_export_msg">Error while exporting data, please try again.</string>
    <string name="export">Export</string>
    <string name="cancel">Cancel</string>
    <string name="choose_area">Choose the area</string>
    <string name="please_choose_area">Please choose the area to use:</string>
    <string name="add_farm_plot_title">Add Plot</string>
    <string name="calculated_area">Calculated Area (%1$s hectares)</string>
    <string name="entered_size">Entered Size (%1$s hectares)</string>
    <string name="insufficient_coordinates_title">Insufficient Coordinates</string>
    <string name="insufficient_coordinates_message">The polygon requires at least 3 points. Please capture the coordinates again.</string>
    <string name="ok">OK</string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="location_services_required_message">Location services are required for this feature. Please enable location services.</string>
    <string name="enable">Enable</string>
    <string name="site_added_successfully">Site added successfully</string>
    <string name="location_permission_denied_message">You will not be able to use the location permission to access the location</string>
    <string name="open_settings">Open Settings\n</string>
    <string name="confirm_update">Confirm Update</string>
    <string name="are_you_sure_update">Are you sure you want to update this site?</string>
    <string name="confirm">Confirm</string>
    <string name="select_file_format">Select File Format</string>
    <string name="csv">CSV</string>
    <string name="geojson">GeoJSON</string>
    <string name="import_file">Import File</string>
    <string name="select_file_to_import">Please select a file to import</string>
    <string name="select_file">Select File</string>
    <string name="import_successful">Import Successful</string>
    <string name="import_failed">Import Failed</string>
    <string name="template_downloaded">template downloaded successfully</string>
    <string name="template_download_failed">template download failed</string>
    <string name="download_template">Download Template</string>
    <string name="select_file_type">Select Template File Type</string>
    <string name="confirm_export">You are about to export %1$d farms. %2$d farms have incomplete data. Do you want to proceed?</string>
    <string name="confirm_share">You are about to share %1$d farms. %2$d farms have incomplete data. Do you want to proceed?</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="needs_update">Needs Update</string>
    <string name="no_update_needed">No Update Needed</string>
    <string name="no_results_found">No Result Found</string>
    <string name="duplicate_farms">%1$d Duplicate farms exist</string>
    <string name="farms_needing_update">%1$d farms need to be updated</string>
    <string name="unsupported_file_format">Unsupported file format. Please upload a CSV or GeoJSON file.</string>
    <string name="geojson_import_successful">GeoJSON import successful</string>
    <string name="csv_import_successful">CSV import successful</string>
    <string name="import_failed_with_error">Import failed: %1$s</string>

    <string name="error_site_name_empty">Site Name should not be empty or contain numbers only</string>
    <string name="error_agent_name_empty">Agent Name should not be empty or contain numbers only</string>
    <string name="error_invalid_phone_number">Invalid Phone Number</string>
    <string name="error_invalid_email_address">Invalid Email Address</string>
    <string name="error_village_empty">Village should not be empty or contain numbers only</string>
    <string name="error_district_empty">District should not be empty or contain numbers only</string>
    <string name="error_farmer_name_empty">Farmer Name should not be empty or contain numbers only</string>
    <string name="error_farm_size_empty">Farm Size should not be empty</string>
    <string name="error_latitude_decimal_places">Latitude must have at least 6 decimal places</string>
    <string name="error_longitude_decimal_places">Longitude must have at least 6 decimal places</string>
    <string name="error_polygon_points">Please capture at least 3 points for the polygon when the size is greater than 4 hectares.</string>
    <string name="error_farm_size_invalid">Invalid Farm Size</string>
    <string name="invalid_farms">%1$d Invalid farm Records were not Imported</string>
    <string name="invalid_farms_with_names">%1$d Invalid farm records were not imported. Farmers: %2$s</string>

    <string name="phone_info">Your phone number may be used for data recovery in future.</string>
    <string name="email_info">Your email address will be used for data recovery in future.</string>
    <string name="sync_service_notification_title">Sync Service</string>
    <string name="sync_service_notification_text">Syncing data…</string>
    <string name="sync_service_channel_id">sync_service_channel</string>
    <string name="sync_complete">Sync Complete</string>
    <string name="successfully_syncronized">Farms data have been backed up successfully. </string>
    <string name="sync_channel_name">Sync Channel</string>
    <string name="sync_channel_description">Channel for sync notifications</string>
    <string name="sync_channel_id">sync_channel_id</string>
    <string name="successfully_synchronized">Successfully synchronized</string>
    <string name="restoration_completed">Restoration completed. Added: %1$d Farms, and %2$d sites created</string>
    <string name="no_data_available">No data available. Please enter your phone number or email to restore data.</string>
    <string name="data_restored_successfully">Data restored successfully.</string>
    <string name="no_data_found">No data was found for the provided information. Please try again later or contact support.</string>
    <string name="restore_data">Restore Data</string>
    <string name="restoration_error">Failed to restore data: %1$s</string>
    <string name="sync_failed">Sync Failed</string>
    <string name="syncronization_failed">Failed to backup the Farms data.</string>

    <string name="update_polygon">Update Polygon?"</string>
    <string name="keep_existing_polygon_or_capture_new">Would you like to keep the existing polygon or capture a new one?</string>
    <string name="keep_existing">Keep Existing</string>
    <string name="capture_new">Capture New</string>
    <string name="warning_difference">Warning: The difference between the entered area and the calculated area is significant (%.2f) ha. Consider using the calculated value instead.</string>
    <string name="polygon_saved">"Polygon saved successfully"</string>
    <string name="invalid_polygon_title">Invalid Polygon</string>
    <string name="invalid_polygon_message">The captured points are invalid or form a straight line. Please try again.</string>

    <string name="delete_this_farm">Delete this Farm</string>
    <string name="farm_will_be_deleted">This Farm will be deleted</string>
    <string name="delete_this_site">Delete this Site</string>
    <string name="site_will_be_deleted">This site and all associated farms will be deleted</string>
    <string name="warning">Warnings</string>

    <string name="total_farms">%1$d total farms</string>
    <string name="total_farms_with_incomplete_data">%1$d with incomplete data</string>
    <string name="error_loading_more_sites">Error Loading More Sites</string>
    <string name="press_back_again">Press back again to exit</string>

    <string name="permission_required">Permission Required</string>
    <string name="go_to_settings_msg">You have permanently denied location permission. Please go to settings to enable it.</string>
    <string name="map_tiles_cached">Map tiles cached successfully.</string>
    <string name="unable_to_get_location">Unable to get location. Map caching skipped.</string>
    <string name="no_internet">No internet connection. Map caching skipped.</string>
    <string name="include_farmer_names_title">Include Farmer Names?</string>
    <string name="include_farmer_names_text">Do you want to include farmer names in the export?</string>

    <string name="back">Back</string>
    <string name="last_synced">Last Synced:</string>
    <string name="backup_now">Backup</string>
    <string name="restore">Restore</string>
    <string name="share">Share</string>
    <string name="import_">Import</string>

    <string name="enable_backup_title">Enable Backup?</string>
    <string name="disable_backup_title">Disable Backup?</string>
    <string name="proceed_question">Do you want to proceed?</string>
    <string name="enable_data_backup_title">Enable Data Backup?</string>
    <string name="enable_backup_message">Enabling backup securely stores your data on the server whenever an internet connection is available. This ensures you can restore it if your device is lost, damaged, or reset. Do you want to proceed?</string>
    <string name="disable_backup_message">Disabling backup will stop automatically saving your data on the server when an internet connection is available. Any previously backed-up data will remain accessible for restoration, but new changes won\'t be saved. Do you want to proceed?.</string>
<!--    <string name="backup_prompt_message">Enabling backup securely stores your data on the server whenever an internet connection is available. This ensures you can restore it if your device is lost, damaged, or reset. Do you want to proceed?</string>-->
<!--    <string name="backup_disable_warning">Disabling backup will stop automatically saving your data on the server when an internet connection is available. Any previously backed-up data will remain accessible for restoration, but new changes won\'t be saved. Do you want to proceed?</string>-->
    <string name="enable_backup">Enable Backup</string>
    <string name="disable_backup">Disable Backup</string>
    <string name="location_permission_required_for_this_feature">Location permissions are required for this feature</string>
    <string name="fetching_location">Fetching location…</string>

    <string name="user_guide_title">User Guide</string>
    <string name="welcome_message">
        Welcome to the User Guide! This guide provides a brief overview of the app\'s features and functionalities. For detailed instructions, download the complete guide from our assets.
    </string>
    <string name="download_user_guide">Download User Guide</string>
    <string name="download_success">User Guide downloaded successfully.</string>
    <string name="download_failed">Download failed: %1$s</string>
    <string name="no_location_selected">No location selected.</string>
    <string name="accept_privacy_policy">Accept our </string>
    <string name="privacy_policy_link_text">data privacy policies</string>
    <string name="please_accept_privacy_policy">Please accept the privacy policy to continue.</string>


</resources>